--- a/style2.css
+++ b/style2.css
@@ -106,7 +106,6 @@ header .nav {
 	background-repeat: no-repeat;
 	background-position: 100% 100%;
 	position: relative;
-	/* width: 100% */
 }
 
 @media screen and (max-width: 768px) {
@@ -227,7 +226,7 @@ header .nav {
 	text-align: center;
 	line-height: 34px;
 	margin-top: 111px;
-	margin-bottom: 12px;
+	margin-bottom: 3.5rem;
 }
 
 .filter_alt:after {
@@ -248,16 +247,51 @@ header .nav {
 	}
 }
 
+.menu {
+	padding-bottom: 5rem;
+}
+
+@media screen and (max-width: 992px) and (min-width: 768px) {
+	.menu {
+		padding-bottom: 3rem;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.menu {
+		padding-bottom: 2.5rem;
+	}
+}
+
 .menu_title {
 	font-size: 22px;
 	font-weight: 400;
 	line-height: 34px;
 	color: #1d1d1d;
+	margin-bottom: 2rem;
+	margin-top: 3.5rem;
 }
 
 @media screen and (max-width: 768px) {
 	.menu_title {
 		display: none;
+	}
+}
+
+.menu .row {
+	row-gap: 49px;
+	justify-content: space-between;
+}
+
+@media screen and (max-width: 992px) and (min-width: 768px) {
+	.menu .row {
+		row-gap: 2rem;
+	}
+}
+
+@media screen and (max-width: 768.1px) {
+	.menu .row {
+		row-gap: 1rem;
 	}
 }
 
@@ -268,6 +302,25 @@ header .nav {
 	box-sizing: border-box;
 	border: 1px solid rgba(117, 117, 117, 0.2);
 	border-radius: 2px;
+	transition: .15s ease;
+}
+
+@media screen and (max-width: 768px) {
+	.card {
+		height: 102px;
+		border-top: none;
+		border-right: none;
+		border-left: none;
+		border-bottom: 1px solid rgba(117, 117, 117, 0.2);
+	}
+}
+
+.card:hover {
+	background-color: rgba(117, 117, 117, 0.1);
+}
+
+.card:active {
+	background-color: #57ad56;
 }
 
 .card_info {
@@ -285,7 +338,7 @@ header .nav {
 
 @media screen and (max-width: 768px) {
 	.card_info {
-		padding: 0 0 15px 8px;
+		padding: 0 0 15px 0;
 	}
 }
 
@@ -310,9 +363,27 @@ header .nav {
 }
 
 .card_img {
-	width: auto;
+	width: 36%;
 	height: 100%;
 	border-radius: 2px;
+	object-fit: cover;
+	transition: .3s ease;
+}
+
+@media screen and (min-width: 768.1px) and (max-width: 992px) {
+	.card_img {
+		width: 26%;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.card_img {
+		width: 33%;
+	}
+}
+
+.card_img:hover {
+	transform: scale(1.03);
 }
 
 
